# neko-route

./: .gitignore  CHANGELOG.md  README.ja.md  README.md  README.zh-CN.md  README.zh-TW.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: linux-packaging.md
scripts/: build-windows.sh  prepare-updater-release.sh  update-homebrew-tap.sh
server/: .gitignore  README.md  go.mod  go.sum  main.go
server/internal/control/: control.go
server/internal/protocol/: protocol.go  protocol_test.go
server/internal/proxy/: proxy.go
server/internal/registry/: registry.go  registry_test.go
src/: Petals.tsx  TrendChart.tsx  api.ts  i18n.tsx  main.tsx  messages.ts  mock.ts  pages.tsx  providers.ts  styles.css  theme.tsx  types.ts  ui.tsx  updates.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: catalog.rs  claude_auth.rs  codex_alias.rs  codex_config.rs  key_store.rs  lan_share.rs  lib.rs  main.rs  official_auth.rs  official_usage.rs  pricing.rs  provider_proxy.rs  redact.rs  request_log.rs  router.rs  server.rs  session_import.rs  share.rs  share_tunnel.rs  store.rs  types.rs  usage.rs
