[package]
name = "neko-route"
version = "0.2.2"
description = "Local AI model router for Codex"
authors = ["Neko Route"]
edition = "2021"
rust-version = "1.80"

[lib]
name = "neko_route_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "neko-route"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
async-stream = "0.3"
aes = "0.8"
axum = { version = "0.7", features = ["json"] }
base64 = "0.22"
bytes = "1"
cbc = "0.1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
futures-util = "0.3"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
pbkdf2 = "0.12"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
sha2 = "0.10"
tauri = { version = "2", features = ["tray-icon", "image-png"] }
thiserror = "2"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
# 只用 ring 加密后端（代码里走 crypto::ring，见 share_tunnel.rs）。关掉默认的 aws_lc_rs，
# 否则拉入 aws-lc-sys，其 C/汇编在 cargo-xwin 交叉编译 Windows 时编不过（hrss.c 报错）。
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12", "logging"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["compat"] }
toml_edit = { version = "0.22", features = ["serde"] }
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
webpki-roots = "0.26"
yamux = "0.13"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
tauri-plugin-opener = "2.5.4"
tauri-plugin-single-instance = "2.4.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Graphics_Dwm", "Win32_System_Diagnostics_ToolHelp", "Win32_System_Threading", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }

[dev-dependencies]
tempfile = "3"
